(In Git)

== 0.6.0 2010-03-05

 === New features
  * Ability to open a list of attachments on an email (with corresponding steps and EmailViewer support). (Kieran Pilkington)

 === Bugfixes
  * Spelling mistake in steps. (Ben Mabey)
  * Delayed Job background processor fixes
    * Narrow delayed job collisions with other apps defining Delayed constant. (Kieran Pilkington)
    * Fix compatibility with earlier versions of DelayedJob (Michael Baumgarten and Kieran Pilkington)

 === Changes
  * Deprecated steps were removed. (Kieran Pilkington)

 === Bufixes

== 0.5.0 2010-02-22

 === New features
  * "should receive <x> emails with subject <the_subject>" step definition (Balint Erdi)
  * "should receive an email with the following body:" step definition (Ben Mabey)
  * Debugging steps that tie into EmailViewer: (Ben Mabey)
    * "save and open current email"
    * "save and open all text emails"
    * "save and open all html emails"
    * "save and open all raw emails"

 === Bufixes
  * Gracefully handle cases where emails do not have a 'to' value. (Kieran Pilkington)

 === Bufixes

== 0.4.0 2010-01-07

 === New features
    * Added support for action_mailer_cache_delivery plugin. (Dan Dofter)
      You must use the fork at: http://github.com/liangzan/action_mailer_cache_delivery

 === Bufixes
    * be_delivered_from matcher now compares both sender name and email address. (Dan Dofter)

== 0.3.8 2009-12-23

 === Bufixes
    * Guard against cc and bcc fields being nil for ActionMailer. (Piotr Sarnacki)

== 0.3.7 2009-12-17

 === New features
 * Matchers are now Ruby 1.9 compatible. (John Dewey)

== 0.3.6 2009-12-16

 === New features
 * Cucumber steps for be_delivered_from, have_header matchers. (Joseph Holsten)
 * Explicit regular expression steps. i.e. "I should see /foo/ in the email body" (Joseph Holsten)

== 0.3.5 2009-09-30 The Pony Release!

 === New features
 * Support for Pony mailer library. (Rob Holland)

== 0.3.4 2009-09-26

=== Bugfixes